# $Id$

2007-10-16	Dmitry E. Pismenny

	* incubator/classes/main/Application/ApplicationUrl.class.php: renamed into
	incubator/classes/main/Application/AppUrl.class.php.

2007-10-11	Ivan Y. Khvostishkov

	* main/Application/ApplicationUrl.class.php: first step for
	Application: base class for working with urls.

	* main/Net/GenericUri.class.php: toStringFromRoot() - url without
	scheme and authority part.

	* main/Utils/DateUtils.class.php: utilities for playing with dates and
	time. First function - getAgeByBirthDate().

2007-10-10	Denis M. Gabaidulin

	* core/Date.class.php: makeFromWeek() constructor was added.

2007-10-09	Ivan Y. Khvostishkov

	* core/Base/Assert.class.php: arguments are visible now, yeah!

2007-10-06	Konstantin V. Arkhipov

	* main/Net/Http/CurlHttpClient.class.php: user-agent added; parasitic
	question mark removed.

2007-10-04	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitiveForm.class.php,
	PrimitiveFormsList.class.php: primitives for creating structured forms
	with the help of DTO classess (coming soon).

2007-10-02	Ivan Y. Khvostishkov

	* main/Utils/TextUtils.class.php: added friendlyNumber() for
	typographing integer numbers.

2007-10-01	Dmitry E. Demidov

	* main/Criteria/Projections/HavingProjection.class.php,
	main/Criteria/Projection.class.php: added HavingProjection.

2007-10-01	Dmitry E. Pismenny

	* core/Form/Form.class.php: added isImported check in importMore
	functions.

	* main/Flow/View.class.php: added ERROR_VIEW const.

2007-09-26	Dmitry A. Lomash

	* main/Criteria/Projections/GroupByClassProjection.class.php: added.

2007-09-26	Konstantin V. Arkhipov

	* main/Base/DateRange.class.php: now implements SingleRange.

2007-09-25	Dmitry E. Demidov

	* core/OSQL/FieldTable.class.php: getField() added.

	* core/OSQL/OrderBy.class.php: isAsc(), invert(), __clone() added.

2007-09-24	Vladimir A. Altuchov

	* main/Net/Ip/: Ip classes added.

	* main/Base/SingleRange.class.php: range interface added.
