@@ -24,11 +24,6 @@
 			$this->id = $segmentId;
 		}
 		
-		public function getPrecision()
-		{
-			return 15;
-		}
-		
 		public function touch($key)
 		{
 			try {
