@@ -51,8 +51,7 @@
 			else
 				$watermark = null;
 			
-			// calling parent just to skip premature getPrecision() calling
-			$this->classKey = parent::keyToInt($watermark.$this->className);
+			$this->classKey = $this->keyToInt($watermark.$this->className);
 			
 			$this->handler = $this->spawnHandler($this->classKey);
 		}
@@ -157,11 +156,6 @@
 				self::$defaultHandler = $handlerName;
 			
 			return new self::$defaultHandler($classKey);
-		}
-		
-		protected function keyToInt($key)
-		{
-			return hexdec(substr(md5($key), 0, $this->handler->getPrecision())) + 1;
 		}
 		//@}
 	}
